Ajout de la notion des questions non accessibles
