# lobby/controllers/Problems.py
@@ -4,10 +4,11 @@ from rest_framework.response import Response
 from rest_framework.views import APIView
 
 from lobby import serializers
-from lobby.dto.Problem import Problem as ProblemDTO
+from lobby.dto.problems import ProblemContent as ProblemDTO, ProblemAbridged
 
 from lobby.models import Probleme
 from lobby.serializers import ProblemsListSerializer
+from users.models import Utilisateur
 
 
 class ProblemsList(APIView):
@@ -15,9 +16,15 @@ class ProblemsList(APIView):
 
     def get(self, request):
         problems = Probleme.objects.all().order_by('index')
-        serializer = ProblemsListSerializer(problems, many=True)
 
-        return Response(serializer.data)
+        user: Utilisateur = Utilisateur.objects.get(id=request.user.id)
+
+        return Response([ProblemAbridged(
+            id=pb.id,
+            titre=pb.titre,
+            index=pb.index,
+            accessible=pb.check_if_problem_unlocked_for_user(user)
+        ).data for pb in problems])
 
 
 class ProblemsById(APIView):
@@ -31,7 +38,7 @@ class ProblemsById(APIView):
         question = probleme.get_question(user_id=1)
 
         dto = ProblemDTO(
-            id_problem=probleme.id,
+            id=probleme.id,
             title=probleme.titre,
             contenu=probleme.contenu,
             question=question.intitule
